# KinectQTRecorder

./: CMakeLists.txt  README.md
include/: badimagedetector.h  framerecorder.h  imagerecorder.h  kinectmotor.h  plotwidget.h  qintelvideosource.h  qmainwindow.h  qmarkup.h  qsettingswindow.h  qvideosource.h  qvideosurface.h  qvideowidget.h  resourcestorage.h  screenshotdisplay.h  serializerthread.h  syncqueue.h
src/: CMakeLists.txt  badimagedetector.cpp  framerecorder.cpp  imagerecorder.cpp  kinectmotor.cpp  main.cpp  plotwidget.cpp  qintelvideosource.cpp  qmainwindow.cpp  qmarkup.cpp  qsettingswindow.cpp  qvideosource.cpp  qvideosurface.cpp  qvideowidget.cpp  resourcestorage.cpp  screenshotdisplay.cpp  serializerthread.cpp
